--- a/index.htm
+++ b/index.htm
@@ -654,14 +654,14 @@ body {
       
     <td align="center" valign="middle"><div id="apDiv6">
       <div id="apDiv7">El Baratillo</div>
-      <div id="apDiv8"><img src="imagenes/logo.png" width="157" height="117" /></div>
+      <div id="apDiv8"><img src="imagenes/logo.jpg" width="157" height="117" /></div>
     </div></td>
         
     <h1>&nbsp;</h1>
   </div>
   <p>&nbsp;</p>
   <div id="apDiv9">
-    <div id="apDiv10"><img src="imagenes/amarula frambuesa.png" width="246" height="238" /></div>
+    <div id="apDiv10"><img src="imagenes/amarula frambuesa.jpg" width="246" height="238" /></div>
     <div id="apDiv11">
       <p> Amarula Frambuesa litro</p>
       <p>Un licor de crema suave y aterciopelado con notas de frambuesa y un toque de extracto de baobab con infusión de cítricos. 15.5% de alcohol. Presentación de litro</p>
@@ -671,7 +671,7 @@ body {
   <p>&nbsp;</p>
   <div id="apDiv5">Donde encuentra los mejores precios</div>
   <div id="apDiv12">
-    <div id="apDiv13"><img src="imagenes/Amarula Vainilla.png" width="246" height="238" /></div>
+    <div id="apDiv13"><img src="imagenes/Amarula Vainilla.jpg" width="246" height="238" /></div>
     <div id="apDiv14">
       <p>Amarula Vainilla litro</p>
       <p>Licor de crema premium de Amarula con toques de especias cálidas que se combinan a la perfección con las notas más sutiles de vainilla y la exclusiva y natural fruta de Marula. 15.5% de alcohol</p>
@@ -691,7 +691,7 @@ body {
   <p>&nbsp;</p>
   <p>&nbsp;</p>
   <div id="apDiv16">
-    <div id="apDiv17"><img src="imagenes/Baileys expresso 750 ml.png" width="246" height="238" /></div>
+    <div id="apDiv17"><img src="imagenes/Baileys expresso 750 ml.jpg" width="246" height="238" /></div>
     <div id="apDiv18">
       <p>Baileys Expresso 750 ML 17% de alcohol</p>
       <p>Una rica mezcla de café tostado asado y Baileys Original Irish Cream, un sabor sublime. Además, es perfecto para transformar cócteles y postres en un delicioso capricho. La fusión de los mejores granos de café, whiskey Irlandés y nata brindan una deliciosa experiencia que une dos populares sabores en una botella</p>
@@ -707,7 +707,7 @@ body {
   <p>&nbsp;</p>
   <p>&nbsp;</p>
   <div id="apDiv20">
-    <div id="apDiv21"><img src="imagenes/Baileys litro original.png" width="246" height="238" /></div>
+    <div id="apDiv21"><img src="imagenes/Baileys litro original.jpg" width="246" height="238" /></div>
     <div id="apDiv22">
       <p>Baileys litro Original 17% de alcohol</p>
       <p>Baileys Original Irish Cream es un licor de crema irlandés que se caracteriza por su sabor dulce y suave, y su color avellana. Elaborado con una combinación de whisky irlandés de triple destilación, crema de leche, alcohol refinado, vainilla, granos de cacao y otros licores finos. Aroma: En nariz se perciben aromas dulces de caramelo, almendra y avellana</p>
@@ -724,7 +724,7 @@ body {
   <p>&nbsp;</p>
   <p>&nbsp;</p>
   <div id="apDiv24">
-    <div id="apDiv25"><img src="imagenes/Baileys 1.75 original.png" width="246" height="238" /></div>
+    <div id="apDiv25"><img src="imagenes/Baileys 1.75 original.jpg" width="246" height="238" /></div>
     <div id="apDiv26">
       <p>Baileys 1.75 L Original 17% de alcohol</p>
       <p>Baileys Original Irish Cream es un licor de crema irlandés que se caracteriza por su sabor dulce y suave, y su color avellana. Elaborado con una combinación de whisky irlandés de triple destilación, crema de leche, alcohol refinado, vainilla, granos de cacao y otros licores finos. Aroma: En nariz se perciben aromas dulces de caramelo, almendra y avellana<br />
@@ -740,7 +740,7 @@ body {
   <p>&nbsp;</p>
   <p>&nbsp;</p>
   <div id="apDiv28">
-    <div id="apDiv29"><img src="imagenes/Crema lima y limon.png" width="246" height="238" /></div>
+    <div id="apDiv29"><img src="imagenes/Crema lima y limon.jpg" width="246" height="238" /></div>
     <div id="apDiv30">
       <p>Crema Habelas Hailas 700 ML </p>
       <p>Dulce crema con sabor a lima y limón, que conquista todos los paladares. Destaca su olor a limón y color especial</p>
@@ -755,7 +755,7 @@ body {
   <p>&nbsp;</p>
   <p>&nbsp;</p>
   <div id="apDiv32">
-    <div id="apDiv33"><img src="imagenes/Crema mango y coco.png" width="246" height="238" /></div>
+    <div id="apDiv33"><img src="imagenes/Crema mango y coco.jpg" width="246" height="238" /></div>
     <div id="apDiv34">
       <p>Crema Habelas Hailas Mango y Coco 700 ML </p>
       <p>Deliciosa combinación de una base láctea de calidad, nuestro mejor aguardiente de Galicia, mango y el exótico coco que le aporta ese sabor tan tropical</p>
@@ -771,7 +771,7 @@ body {
   <p>&nbsp;</p>
   <p>&nbsp;</p>
   <div id="apDiv36">
-    <div id="apDiv37"><img src="imagenes/Mos de pas.png" width="246" height="238" /></div>
+    <div id="apDiv37"><img src="imagenes/Mos de pas.jpg" width="246" height="238" /></div>
     <div id="apDiv38">
       <p>Crema de Orujo Mos de P'as. Litro</p>
       <p>El Licor Crema de Orujo Mos de Pas en formato frasca de 1 litro es una deliciosa combinación del tradicional orujo con una base cremosa, ofreciendo una bebida suave, dulce y con un toque de licor</p>
@@ -787,7 +787,7 @@ body {
   <p>&nbsp;</p>
   <p>&nbsp;</p>
   <div id="apDiv40">
-    <div id="apDiv41"><img src="imagenes/tekila rose 750 ml.png" width="246" height="238" /></div>
+    <div id="apDiv41"><img src="imagenes/tekila rose 750 ml.jpg" width="246" height="238" /></div>
     <div id="apDiv42">
       <p>Crema Tequila Rose 750 ML</p>
       <p>Tequila Rose es una combinación suave y sedosa de rica crema de fresa y el toque emocionante del tequila. Siempre da el toque perfecto, ya sea que lo prefieras dulce o seductor. Intrépido o divertido. Exuberante o desenfadado</p>
@@ -803,7 +803,7 @@ body {
   <p>&nbsp;</p>
   <p>&nbsp;</p>
   <div id="apDiv44">
-    <div id="apDiv45"><img src="imagenes/Tequilero del leste frutillacon agave.png" width="246" height="238" /></div>
+    <div id="apDiv45"><img src="imagenes/Tequilero del leste frutillacon agave.jpg" width="246" height="238" /></div>
     <div id="apDiv46">
       <p>Tequilero del leste frutilla con agave 750 ML</p>
       <p>Combinando la intensidad del agave azul con el seductor dulzor de la fresa, esta bebida excepcional ofrece una experiencia única para los amantes de los licores refinados. Cada sorbo es un viaje sensorial a través de la tradición del tequila y la innovación del sabor frutal</p>
@@ -826,7 +826,7 @@ body {
   <p>&nbsp;</p>
   <p>&nbsp;</p>
   <div id="apDiv49">
-    <div id="apDiv50"><img src="imagenes/sheridan licor de cafe.png" width="246" height="238" /></div>
+    <div id="apDiv50"><img src="imagenes/sheridan licor de cafe.jpg" width="246" height="238" /></div>
     <div id="apDiv51">
       <p>Sheridan Licor de café y crema</p>
       <p>Delicioso Licor de café, que se fusiona al unísono al servir con un exisito licor de crema, generando una mezcla única de sabores que sólo el licor Sheridan´s puede brindarte</p>
