--- a/index.htm
+++ b/index.htm
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <!-- TemplateBeginEditable name="doctitle" -->
-<title>El Baratillo</title>
+<title>Donde Mau, catálogo de productos</title>
 <!-- TemplateEndEditable -->
 <!-- TemplateBeginEditable name="head" -->
 <!-- TemplateEndEditable -->
@@ -51,7 +51,7 @@
 #apDiv5 {
 	position: absolute;
 	width: 85%;
-	height: auto;
+	height: 61px;
 	z-index: 4;
 	left: 118px;
 	top: 151px;
@@ -66,11 +66,13 @@
 	height: 115px;
 	z-index: 5;
 	font-family: Verdana, Arial, Helvetica, sans-serif;
+	left: 107px;
+	top: 36px;
 }
 #apDiv7 {
 	position: absolute;
 	width: 80%;
-	height: 115px;
+	height: 171px;
 	z-index: 1;
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 	color: #F00;
@@ -82,17 +84,18 @@
 #apDiv8 {
 	position: absolute;
 	width: 20%;
-	height: 115px;
+	height: 149px;
 	z-index: 2;
 	left: 757px;
+	text-align: center;
 }
 #apDiv9 {
 	position: absolute;
 	width: 85%;
 	height: 293px;
 	z-index: 6;
-	left: 117px;
-	top: 228px;
+	left: 124px;
+	top: 211px;
 }
 #apDiv10 {
 	position: absolute;
@@ -653,7 +656,7 @@ body {
   <div class="content">
       
     <td align="center" valign="middle"><div id="apDiv6">
-      <div id="apDiv7">El Baratillo</div>
+      <div id="apDiv7">Donde Mau</div>
       <div id="apDiv8"><img src="imagenes/logo.jpg" width="157" height="117" /></div>
     </div></td>
         
@@ -669,7 +672,6 @@ body {
     <div id="apDiv15">Precio: ¢ 15.000</div>
   </div>
   <p>&nbsp;</p>
-  <div id="apDiv5">Donde encuentra los mejores precios</div>
   <div id="apDiv12">
     <div id="apDiv13"><img src="imagenes/Amarula Vainilla.jpg" width="246" height="238" /></div>
     <div id="apDiv14">
