--- a/productos.htm
+++ b/productos.htm
@@ -92,10 +92,10 @@
 #apDiv9 {
 	position: absolute;
 	width: 85%;
-	height: 207px;
+	height: 293px;
 	z-index: 6;
-	left: 110px;
-	top: 271px;
+	left: 124px;
+	top: 211px;
 }
 #apDiv10 {
 	position: absolute;
@@ -140,7 +140,7 @@ body {
 #apDiv14 {
 	position: absolute;
 	width: 50%;
-	height: 276px;
+	height: 356px;
 	z-index: 2;
 	left: 474px;
 	top: 1px;
@@ -208,10 +208,10 @@ body {
 #apDiv20 {
 	position: absolute;
 	width: 85%;
-	height: 396px;
+	height: 281px;
 	z-index: 9;
-	top: 1239px;
-	left: 112px;
+	top: 934px;
+	left: 110px;
 }
 #apDiv21 {
 	position: absolute;
@@ -223,7 +223,7 @@ body {
 #apDiv22 {
 	position: absolute;
 	width: 50%;
-	height: 386px;
+	height: 272px;
 	z-index: 2;
 	left: 475px;
 }
@@ -241,10 +241,10 @@ body {
 #apDiv24 {
 	position: absolute;
 	width: 85%;
-	height: 466px;
+	height: 346px;
 	z-index: 10;
-	top: 1653px;
-	left: 113px;
+	top: 1246px;
+	left: 111px;
 }
 #apDiv25 {
 	position: absolute;
@@ -256,7 +256,7 @@ body {
 #apDiv26 {
 	position: absolute;
 	width: 50%;
-	height: 460px;
+	height: 337px;
 	z-index: 2;
 	left: 474px;
 	top: 2px;
@@ -713,94 +713,6 @@ body {
 	color: #030;
 	font-weight: bold;
 }
-#apDiv81 {
-	position: absolute;
-	width: 45%;
-	height: 193px;
-	z-index: 1;
-	text-align: center;
-}
-#apDiv82 {
-	position: absolute;
-	width: 10%;
-	height: 188px;
-	z-index: 2;
-	left: 427px;
-	top: 4px;
-}
-#apDiv83 {
-	position: absolute;
-	width: 45%;
-	height: 190px;
-	z-index: 3;
-	left: 521px;
-	top: 1px;
-	text-align: center;
-}
-#apDiv84 {
-	position: absolute;
-	width: 85%;
-	height: 69px;
-	z-index: 7;
-	text-align: center;
-	color: #F00;
-	font-weight: bold;
-	font-size: 250%;
-	left: 110px;
-	top: 569px;
-}
-#apDiv85 {
-	position: absolute;
-	width: 85%;
-	height: 115px;
-	z-index: 8;
-	left: 110px;
-	top: 668px;
-}
-#apDiv86 {
-	position: absolute;
-	width: 15%;
-	height: 115px;
-	z-index: 1;
-	text-align: center;
-}
-#apDiv87 {
-	position: absolute;
-	width: 15%;
-	height: 115px;
-	z-index: 2;
-	left: 143px;
-	top: 1px;
-	text-align: center;
-}
-#apDiv88 {
-	position: absolute;
-	width: 30%;
-	height: 115px;
-	z-index: 3;
-	left: 285px;
-	top: 1px;
-	text-align: center;
-	font-weight: bold;
-	color: #03F;
-	font-size: 200%;
-}
-#apDiv89 {
-	position: absolute;
-	width: 30%;
-	height: 115px;
-	z-index: 4;
-	left: 664px;
-	top: 2px;
-}
-#apDiv90 {
-	position: absolute;
-	width: 10%;
-	height: 115px;
-	z-index: 5;
-	left: 568px;
-	top: 2px;
-}
 </style>
 </head>
 
@@ -818,9 +730,28 @@ body {
   </div>
   <p>&nbsp;</p>
   <div id="apDiv9">
-    <div id="apDiv81"><a href="licores.htm"><img src="imagenes/licores.jpg" alt="Ver catálogo de licores" width="354" height="191" /></a></div>
-    <div id="apDiv82"></div>
-    <div id="apDiv83"><a href="productos.htm"><img src="imagenes/productos.jpg" alt="Ver catálogo de productos" width="354" height="191" /></a></div>
+    <div id="apDiv10"><img src="imagenes/cargador multi puerto.jpg" width="246" height="238" /></div>
+    <div id="apDiv11">
+      <p> Cargador para dispositivos USB</p>
+      <p>Cargador para dispositivos USB, que se conecta al tomacorriente. Ideal para celulares, lámparas, controles, entre otros</p>
+      <p>También puerto tipo C</p>
+      <p>&nbsp;</p>
+    </div>
+    <div id="apDiv15">Precio: ¢ 10.000</div>
+  </div>
+  <p>&nbsp;</p>
+  <div id="apDiv12">
+    <div id="apDiv13"><img src="imagenes/picador de verduras.jpg" width="246" height="238" /></div>
+    <div id="apDiv14">
+      <p>Multi picador de verduras diseñado para facilitar la preparación de alimentos al procesar verduras<br />
+        Capacidad de 1.2 litros<br />
+        Permite desmontaje fácil y seguro<br />
+        Apto para lavavajillas<br />
+        Fácil de limpiar<br />
+        Cuchillas intercambiables de acero inoxidable, diseñadas para rebanar, cortar, picar y rallar verduras<br />
+      Incluye mecanismos de bloqueo y sujeción para evitar el funcionamiento accidental</p>
+    </div>
+    <div id="apDiv">Precio: ¢ 12.000</div>
   </div>
   <p>&nbsp;</p>
   <p>&nbsp;</p>
@@ -831,16 +762,49 @@ body {
   <p>&nbsp;</p>
   <p>&nbsp;</p>
   <p>&nbsp;</p>
-  <div id="apDiv84">Puede contactarnos a los números:</div>
   <p>&nbsp;</p>
   <p>&nbsp;</p>
-  <div id="apDiv85">
-    <div id="apDiv86"><img src="imagenes/telefono.jpg" width="79" height="116" /></div>
-    <div id="apDiv87"><img src="imagenes/whatsapp.jpg" width="124" height="113" /></div>
-    <div id="apDiv88"><img src="imagenes/cel mio.jpg" width="280" height="112" /></div>
-    <div id="apDiv89"><img src="imagenes/cel jacky.jpg" width="280" height="112" /></div>
-    <div id="apDiv90"></div>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <div id="apDiv20">
+    <div id="apDiv21"><img src="imagenes/perfume Tommy girl.jpg" width="246" height="238" /></div>
+    <div id="apDiv22">
+      <p>Tommy Girl </p>
+      <p>De Tommy Hilfiger es una fragancia de la familia olfativa Floral Frutal para Mujeres<br />
+        100 Ml<br />
+        Floral Frutal<br />
+      Aplicar perfume directamente sobre la ropa, puede manchar, dañar y alterar el tejido</p>
+    </div>
+    <div id="apDiv23">Precio: ¢ 24.000</div>
   </div>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <div id="apDiv24">
+    <div id="apDiv25"><img src="imagenes/perfume Tommy men.jpg" width="246" height="238" /></div>
+    <div id="apDiv26">
+      <p>Perfume Tommy para caballeros<br />
+      </p>
+      <p>Este Eau de toilette es la fragancia clásica de Tommy Hilfiger, lo que lo convierte en un perfume atemporal, fresco y vigente<br />
+        En un envase sobrio y elegante, remarcado por líneas claras y coronado con una tapa plateada, en su formato de 100 ml., hacen de este perfume de hombre el ideal para el día a día<br />
+        100 ML<br />
+      Floral</p>
+    </div>
+    <div id="apDiv27">Precio: ¢ 24.000</div>
+  </div>
+  <p>&nbsp;</p>
   <p>&nbsp;</p>
   <p>&nbsp;</p>
   <p>&nbsp;</p>
