--- a/licores.htm
+++ b/licores.htm
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <!-- TemplateBeginEditable name="doctitle" -->
-<title>Donde Mau, catálogo de productos</title>
+<title>Donde Mau, catálogo de licores</title>
 <!-- TemplateEndEditable -->
 <!-- TemplateBeginEditable name="head" -->
 <!-- TemplateEndEditable -->
@@ -92,10 +92,10 @@
 #apDiv9 {
 	position: absolute;
 	width: 85%;
-	height: 207px;
+	height: 293px;
 	z-index: 6;
-	left: 110px;
-	top: 271px;
+	left: 124px;
+	top: 211px;
 }
 #apDiv10 {
 	position: absolute;
@@ -713,94 +713,6 @@ body {
 	color: #030;
 	font-weight: bold;
 }
-#apDiv81 {
-	position: absolute;
-	width: 45%;
-	height: 193px;
-	z-index: 1;
-	text-align: center;
-}
-#apDiv82 {
-	position: absolute;
-	width: 10%;
-	height: 188px;
-	z-index: 2;
-	left: 427px;
-	top: 4px;
-}
-#apDiv83 {
-	position: absolute;
-	width: 45%;
-	height: 190px;
-	z-index: 3;
-	left: 521px;
-	top: 1px;
-	text-align: center;
-}
-#apDiv84 {
-	position: absolute;
-	width: 85%;
-	height: 69px;
-	z-index: 7;
-	text-align: center;
-	color: #F00;
-	font-weight: bold;
-	font-size: 250%;
-	left: 110px;
-	top: 569px;
-}
-#apDiv85 {
-	position: absolute;
-	width: 85%;
-	height: 115px;
-	z-index: 8;
-	left: 110px;
-	top: 668px;
-}
-#apDiv86 {
-	position: absolute;
-	width: 15%;
-	height: 115px;
-	z-index: 1;
-	text-align: center;
-}
-#apDiv87 {
-	position: absolute;
-	width: 15%;
-	height: 115px;
-	z-index: 2;
-	left: 143px;
-	top: 1px;
-	text-align: center;
-}
-#apDiv88 {
-	position: absolute;
-	width: 30%;
-	height: 115px;
-	z-index: 3;
-	left: 285px;
-	top: 1px;
-	text-align: center;
-	font-weight: bold;
-	color: #03F;
-	font-size: 200%;
-}
-#apDiv89 {
-	position: absolute;
-	width: 30%;
-	height: 115px;
-	z-index: 4;
-	left: 664px;
-	top: 2px;
-}
-#apDiv90 {
-	position: absolute;
-	width: 10%;
-	height: 115px;
-	z-index: 5;
-	left: 568px;
-	top: 2px;
-}
 </style>
 </head>
 
@@ -818,9 +730,21 @@ body {
   </div>
   <p>&nbsp;</p>
   <div id="apDiv9">
-    <div id="apDiv81"><a href="licores.htm"><img src="imagenes/licores.jpg" alt="Ver catálogo de licores" width="354" height="191" /></a></div>
-    <div id="apDiv82"></div>
-    <div id="apDiv83"><a href="productos.htm"><img src="imagenes/productos.jpg" alt="Ver catálogo de productos" width="354" height="191" /></a></div>
+    <div id="apDiv10"><img src="imagenes/amarula frambuesa.jpg" width="246" height="238" /></div>
+    <div id="apDiv11">
+      <p> Amarula Frambuesa litro</p>
+      <p>Un licor de crema suave y aterciopelado con notas de frambuesa y un toque de extracto de baobab con infusión de cítricos. 15.5% de alcohol. Presentación de litro</p>
+    </div>
+    <div id="apDiv15">Precio: ¢ 15.000</div>
+  </div>
+  <p>&nbsp;</p>
+  <div id="apDiv12">
+    <div id="apDiv13"><img src="imagenes/Amarula Vainilla.jpg" width="246" height="238" /></div>
+    <div id="apDiv14">
+      <p>Amarula Vainilla litro</p>
+      <p>Licor de crema premium de Amarula con toques de especias cálidas que se combinan a la perfección con las notas más sutiles de vainilla y la exclusiva y natural fruta de Marula. 15.5% de alcohol</p>
+    </div>
+    <div id="apDiv">Precio: ¢ 15.000</div>
   </div>
   <p>&nbsp;</p>
   <p>&nbsp;</p>
@@ -831,16 +755,253 @@ body {
   <p>&nbsp;</p>
   <p>&nbsp;</p>
   <p>&nbsp;</p>
-  <div id="apDiv84">Puede contactarnos a los números:</div>
   <p>&nbsp;</p>
   <p>&nbsp;</p>
-  <div id="apDiv85">
-    <div id="apDiv86"><img src="imagenes/telefono.jpg" width="79" height="116" /></div>
-    <div id="apDiv87"><img src="imagenes/whatsapp.jpg" width="124" height="113" /></div>
-    <div id="apDiv88"><img src="imagenes/cel mio.jpg" width="280" height="112" /></div>
-    <div id="apDiv89"><img src="imagenes/cel jacky.jpg" width="280" height="112" /></div>
-    <div id="apDiv90"></div>
+  <p>&nbsp;</p>
+  <div id="apDiv16">
+    <div id="apDiv17"><img src="imagenes/Baileys expresso 750 ml.jpg" width="246" height="238" /></div>
+    <div id="apDiv18">
+      <p>Baileys Expresso 750 ML 17% de alcohol</p>
+      <p>Una rica mezcla de café tostado asado y Baileys Original Irish Cream, un sabor sublime. Además, es perfecto para transformar cócteles y postres en un delicioso capricho. La fusión de los mejores granos de café, whiskey Irlandés y nata brindan una deliciosa experiencia que une dos populares sabores en una botella</p>
+    </div>
+    <div id="apDiv19">Precio: ¢ 15.000</div>
   </div>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <div id="apDiv20">
+    <div id="apDiv21"><img src="imagenes/Baileys litro original.jpg" width="246" height="238" /></div>
+    <div id="apDiv22">
+      <p>Baileys litro Original 17% de alcohol</p>
+      <p>Baileys Original Irish Cream es un licor de crema irlandés que se caracteriza por su sabor dulce y suave, y su color avellana. Elaborado con una combinación de whisky irlandés de triple destilación, crema de leche, alcohol refinado, vainilla, granos de cacao y otros licores finos. Aroma: En nariz se perciben aromas dulces de caramelo, almendra y avellana</p>
+    </div>
+    <div id="apDiv23">Precio: ¢ 17.000</div>
+  </div>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <div id="apDiv24">
+    <div id="apDiv25"><img src="imagenes/Baileys 1.75 original.jpg" width="246" height="238" /></div>
+    <div id="apDiv26">
+      <p>Baileys 1.75 L Original 17% de alcohol</p>
+      <p>Baileys Original Irish Cream es un licor de crema irlandés que se caracteriza por su sabor dulce y suave, y su color avellana. Elaborado con una combinación de whisky irlandés de triple destilación, crema de leche, alcohol refinado, vainilla, granos de cacao y otros licores finos. Aroma: En nariz se perciben aromas dulces de caramelo, almendra y avellana<br />
+        Sabor: En boca es cremoso, envolvente y suave, con una nota alcohólica agradable</p>
+    </div>
+    <div id="apDiv27">Precio: ¢ 26.000</div>
+  </div>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <div id="apDiv28">
+    <div id="apDiv29"><img src="imagenes/Crema lima y limon.jpg" width="246" height="238" /></div>
+    <div id="apDiv30">
+      <p>Crema Habelas Hailas 700 ML </p>
+      <p>Dulce crema con sabor a lima y limón, que conquista todos los paladares. Destaca su olor a limón y color especial</p>
+      <p>15% de alcohol</p>
+    </div>
+    <div id="apDiv31">Precio: ¢ 14.000</div>
+  </div>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <div id="apDiv32">
+    <div id="apDiv33"><img src="imagenes/Crema mango y coco.jpg" width="246" height="238" /></div>
+    <div id="apDiv34">
+      <p>Crema Habelas Hailas Mango y Coco 700 ML </p>
+      <p>Deliciosa combinación de una base láctea de calidad, nuestro mejor aguardiente de Galicia, mango y el exótico coco que le aporta ese sabor tan tropical</p>
+      <p>15% de alcohol</p>
+    </div>
+    <div id="apDiv35">Precio: ¢ 14.000</div>
+  </div>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <div id="apDiv36">
+    <div id="apDiv37"><img src="imagenes/Mos de pas.jpg" width="246" height="238" /></div>
+    <div id="apDiv38">
+      <p>Crema de Orujo Mos de P'as. Litro</p>
+      <p>El Licor Crema de Orujo Mos de Pas en formato frasca de 1 litro es una deliciosa combinación del tradicional orujo con una base cremosa, ofreciendo una bebida suave, dulce y con un toque de licor</p>
+      <p>15% de alcohol</p>
+    </div>
+    <div id="apDiv39">Precio: ¢ 15.000</div>
+  </div>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <div id="apDiv40">
+    <div id="apDiv41"><img src="imagenes/tekila rose 750 ml.jpg" width="246" height="238" /></div>
+    <div id="apDiv42">
+      <p>Crema Tequila Rose 750 ML</p>
+      <p>Tequila Rose es una combinación suave y sedosa de rica crema de fresa y el toque emocionante del tequila. Siempre da el toque perfecto, ya sea que lo prefieras dulce o seductor. Intrépido o divertido. Exuberante o desenfadado</p>
+      <p>15% de alcohol</p>
+    </div>
+    <div id="apDiv43">Precio: ¢ 14.000</div>
+  </div>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <div id="apDiv44">
+    <div id="apDiv45"><img src="imagenes/Tequilero del leste frutillacon agave.jpg" width="246" height="238" /></div>
+    <div id="apDiv46">
+      <p>Tequilero del leste frutilla con agave 750 ML</p>
+      <p>Combinando la intensidad del agave azul con el seductor dulzor de la fresa, esta bebida excepcional ofrece una experiencia única para los amantes de los licores refinados. Cada sorbo es un viaje sensorial a través de la tradición del tequila y la innovación del sabor frutal</p>
+      <p>15% de alcohol</p>
+    </div>
+    <div id="apDiv47">Precio: ¢ 14.000</div>
+  </div>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <div id="apDiv49">
+    <div id="apDiv50"><img src="imagenes/sheridan licor de cafe.jpg" width="246" height="238" /></div>
+    <div id="apDiv51">
+      <p>Sheridan Licor de café y crema</p>
+      <p>Delicioso Licor de café, que se fusiona al unísono al servir con un exisito licor de crema, generando una mezcla única de sabores que sólo el licor Sheridan´s puede brindarte</p>
+      <p>670 ML de licor de café y 330 ml de crema</p>
+      <p>15.5% de alcohol</p>
+    </div>
+    <div id="apDiv52">Precio: ¢ 25.000</div>
+  </div>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <div id="apDiv53">
+    <div id="apDiv54"><img src="imagenes/Ron Cortez Blanco 1.75.jpg" width="246" height="238" /></div>
+    <div id="apDiv55">
+      <p>Ron Cortez Blanco 1.75 Litros</p>
+      <p>Cortez Blanco es un ron claro, extraordinariamente suave y ligero. Su sutil aroma y delicado sabor mezclan muy bien con cola, agua tónica, club soda y jugos de frutas tropicales</p>
+      <p>35% de alcohol</p>
+    </div>
+    <div id="apDiv56">Precio: ¢ 25.000</div>
+  </div>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <div id="apDiv57">
+    <div id="apDiv58"><img src="imagenes/Jagermeifter.jpg" width="246" height="238" /></div>
+    <div id="apDiv59">
+      <p>Jägermeifter litro</p>
+      <p>Es un licor alemán de hierbas y especias. Tiene un sabor intenso, semi amargo y semi dulce, con notas a regaliz, chocolate negro, ciruelas pasas, canela, jengibre, anís y menta. Se elabora con más de 56 ingredientes botánicos, entre los que se encuentran hinojo, raíz de angélica, regaliz, canela, cáscara de naranja, clavo de olor, jengibre, caramelo y cardamomo</p>
+      <p>35% de alcohol</p>
+    </div>
+    <div id="apDiv60">Precio: ¢ 18.000</div>
+  </div>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <div id="apDiv61">
+    <div id="apDiv62"><img src="imagenes/Gelatinas 5 sabores.jpg" width="246" height="238" /></div>
+    <div id="apDiv63">
+      <p>Gelatina de 5 sabores con Vodka</p>
+      <p>Deliciosa gelatina de 5 sabores con Vodka</p>
+      <p>Presentación de 25 unidades</p>
+      <p>12% de alcohol</p>
+    </div>
+    <div id="apDiv64">Precio: ¢ 10.000</div>
+  </div>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <div id="apDiv65">
+    <div id="apDiv66"><img src="imagenes/Bidu shots.jpg" width="246" height="238" /></div>
+    <div id="apDiv67">
+      <p>Shots de 5 sabores con Vodka</p>
+      <p>Uva, cereza, limón, manzana verde y maracuyá</p>
+      <p>Contiene 20 shots de 30 ml</p>
+      <p>15% de alcohol</p>
+    </div>
+    <div id="apDiv68">Precio: ¢ 10.000</div>
+  </div>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <div id="apDiv69">
+    <div id="apDiv70"><img src="imagenes/Flor de cana 7 anos.jpg" width="246" height="238" /></div>
+    <div id="apDiv71">
+      <p>Ron Flor de Caña 7 años litro</p>
+      <p>Elaborado de manera sostenible (certificado Carbono Neutral y Fair Trade) en una propiedad familiar de cinco generaciones desde 1890, es añejado naturalmente sin azúcar ni ingredientes artificiales y destilado con energía 100% renovable</p>
+      <p>40% de alcohol</p>
+    </div>
+    <div id="apDiv72">Precio: ¢ 12.000</div>
+  </div>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
   <p>&nbsp;</p>
   <p>&nbsp;</p>
   <p>&nbsp;</p>
