--- a/index.htm
+++ b/index.htm
@@ -4,6 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <!-- TemplateBeginEditable name="doctitle" -->
 <title>Donde Mau, catálogo de productos</title>
+<link rel="icon" href="imagenes/playa.ico" type="image/x-icon">
 <!-- TemplateEndEditable -->
 <!-- TemplateBeginEditable name="head" -->
 <!-- TemplateEndEditable -->
