--- a/licores.htm
+++ b/licores.htm
@@ -4,6 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <!-- TemplateBeginEditable name="doctitle" -->
 <title>Donde Mau, catálogo de licores</title>
+<link rel="icon" href="imagenes/Drinks-14_icon.ico" type="image/x-icon">
 <!-- TemplateEndEditable -->
 <!-- TemplateBeginEditable name="head" -->
 <!-- TemplateEndEditable -->
