--- a/index.htm
+++ b/index.htm
@@ -93,7 +93,7 @@
 #apDiv9 {
 	position: absolute;
 	width: 85%;
-	height: 207px;
+	height: 242px;
 	z-index: 6;
 	left: 110px;
 	top: 271px;
@@ -720,22 +720,24 @@ body {
 	height: 193px;
 	z-index: 1;
 	text-align: center;
+	left: -6px;
+	top: 45px;
 }
 #apDiv82 {
 	position: absolute;
 	width: 10%;
 	height: 188px;
 	z-index: 2;
-	left: 427px;
-	top: 4px;
+	left: 418px;
+	top: 53px;
 }
 #apDiv83 {
 	position: absolute;
 	width: 45%;
 	height: 190px;
 	z-index: 3;
-	left: 521px;
-	top: 1px;
+	left: 516px;
+	top: 51px;
 	text-align: center;
 }
 #apDiv84 {
@@ -802,6 +804,33 @@ body {
 	left: 568px;
 	top: 2px;
 }
+#apDiv91 {
+	position: absolute;
+	width: 100%;
+	height: 42px;
+	z-index: 4;
+}
+#apDiv92 {
+	position: absolute;
+	width: 50%;
+	height: 42px;
+	z-index: 1;
+	text-align: center;
+	font-weight: bold;
+	color: #00F;
+	font-size: 150%;
+}
+#apDiv93 {
+	position: absolute;
+	width: 50%;
+	height: 42px;
+	z-index: 2;
+	left: 475px;
+	text-align: center;
+	color: #009;
+	font-weight: bold;
+	font-size: 150%;
+}
 </style>
 </head>
 
@@ -822,6 +851,10 @@ body {
     <div id="apDiv81"><a href="licores.htm"><img src="imagenes/licores.jpg" alt="Ver catálogo de licores" width="354" height="191" /></a></div>
     <div id="apDiv82"></div>
     <div id="apDiv83"><a href="productos.htm"><img src="imagenes/productos.jpg" alt="Ver catálogo de productos" width="354" height="191" /></a></div>
+    <div id="apDiv91">
+      <div id="apDiv92">Catálogo de licores</div>
+      <div id="apDiv93">Catálogo de otros productos</div>
+    </div>
   </div>
   <p>&nbsp;</p>
   <p>&nbsp;</p>
