--- a/licores.html
+++ b/licores.html
@@ -17,15 +17,15 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>licores</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/licores.css?crc=3772277934" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/licores.css?crc=3923038337" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/nomq_licores.css?crc=252985258" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_licores.css?crc=194636439" id="nomq_pagesheet"/>
   <![endif]-->
    </head>
  <body>
 
-  <div class="breakpoint active" id="bp_infinity" data-min-width="321"><!-- responsive breakpoint node -->
+  <div class="breakpoint active" id="bp_infinity" data-min-width="721"><!-- responsive breakpoint node -->
    <div class="clearfix borderbox" id="page"><!-- group -->
     <div class="clearfix grpelem" id="ppu387-4"><!-- column -->
      <div class="clearfix colelem" id="pu387-4"><!-- group -->
@@ -34,6 +34,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
       <div class="clip_frame grpelem" id="u393"><!-- image -->
        <img class="block temp_no_img_src" id="u393_img" data-orig-src="images/logo.jpg?crc=468265230" alt="" data-heightwidthratio="0.7706422018348624" data-image-width="109" data-image-height="84" src="images/blank.gif?crc=4208392903"/>
+      </div>
+      <div class="clip_frame grpelem" id="u1997"><!-- image -->
+       <img class="block temp_no_img_src" id="u1997_img" data-orig-src="images/logo.jpg?crc=468265230" alt="" data-heightwidthratio="0.7706422018348624" data-image-width="109" data-image-height="84" src="images/blank.gif?crc=4208392903"/>
       </div>
      </div>
      <div class="clearfix colelem" id="u405-4"><!-- content -->
@@ -371,9 +374,60 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
    </div>
   </div>
-  <div class="breakpoint" id="bp_320" data-max-width="320"><!-- responsive breakpoint node -->
+  <div class="breakpoint" id="bp_720" data-max-width="720"><!-- responsive breakpoint node -->
    <div class="clearfix borderbox temp_no_id" data-orig-id="page"><!-- column -->
-    <div class="verticalspacer" data-offset-top="0" data-content-above-spacer="0" data-content-below-spacer="500" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="clearfix colelem" id="pu1960-4"><!-- group -->
+     <div class="clearfix grpelem" id="u1960-4"><!-- content -->
+      <p>Donde Mau</p>
+     </div>
+     <div class="clip_frame grpelem temp_no_id" data-orig-id="u1997"><!-- image -->
+      <img class="block temp_no_id temp_no_img_src" data-orig-src="images/logo.jpg?crc=468265230" alt="" data-heightwidthratio="0.7741935483870968" data-image-width="93" data-image-height="72" data-orig-id="u1997_img" src="images/blank.gif?crc=4208392903"/>
+     </div>
+    </div>
+    <div class="clearfix colelem" id="u1961-4"><!-- content -->
+     <p>Sección de licores</p>
+    </div>
+    <div class="clearfix colelem" id="pu1962"><!-- group -->
+     <div class="clip_frame grpelem" id="u1962"><!-- image -->
+      <img class="block temp_no_img_src" id="u1962_img" data-orig-src="images/amarula%20frambuesa.jpg?crc=3905419930" alt="" data-heightwidthratio="1.3298429319371727" data-image-width="191" data-image-height="254" src="images/blank.gif?crc=4208392903"/>
+     </div>
+     <div class="clearfix grpelem" id="pu1964-4"><!-- column -->
+      <div class="clearfix colelem" id="u1964-4"><!-- content -->
+       <p>Amarula Frambuesa litro</p>
+      </div>
+      <div class="clearfix colelem" id="u1965-10"><!-- content -->
+       <p>Un licor de crema suave y aterciopelado con notas de frambuesa y un toque de extracto de baobab con infusión de cítricos</p>
+       <p>&nbsp;</p>
+       <p>15.5% de alcohol</p>
+       <p>&nbsp;</p>
+       <p>Presentación: Litro</p>
+      </div>
+      <div class="clearfix colelem" id="u1966-4"><!-- content -->
+       <p>Precio: ¢ 15.000</p>
+      </div>
+     </div>
+    </div>
+    <div class="clearfix colelem" id="pu2009"><!-- group -->
+     <div class="clip_frame grpelem" id="u2009"><!-- image -->
+      <img class="block temp_no_img_src" id="u2009_img" data-orig-src="images/amarula%20vainilla.jpg?crc=467820457" alt="" data-heightwidthratio="1.3298429319371727" data-image-width="191" data-image-height="254" src="images/blank.gif?crc=4208392903"/>
+     </div>
+     <div class="clearfix grpelem" id="pu2011-4"><!-- column -->
+      <div class="clearfix colelem" id="u2011-4"><!-- content -->
+       <p>Amarula vainilla litro</p>
+      </div>
+      <div class="clearfix colelem" id="u2012-10"><!-- content -->
+       <p>Licor de crema premium de Amarula con toques de especias cálidas que se combinan a la perfección con las notas más sutiles de vainilla y la exclusiva y natural fruta de Marula</p>
+       <p>&nbsp;</p>
+       <p>15.5% de alcohol</p>
+       <p>&nbsp;</p>
+       <p>Presentación: Litro</p>
+      </div>
+      <div class="clearfix colelem" id="u2013-4"><!-- content -->
+       <p>Precio: ¢ 15.000</p>
+      </div>
+     </div>
+    </div>
+    <div class="verticalspacer" data-offset-top="877" data-content-above-spacer="858" data-content-below-spacer="9941" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
    </div>
   </div>
   <!-- Other scripts -->
