--- a/index.html
+++ b/index.html
@@ -17,24 +17,71 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Inicio</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=4238333232"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4242233882" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=534651210"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=61812943" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-p_g_-maestra.css?crc=3978191353"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=117876179" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-p_g_-maestra.css?crc=186744596"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=4107437438" id="nomq_pagesheet"/>
   <![endif]-->
    </head>
  <body>
 
-  <div class="breakpoint active" id="bp_infinity" data-min-width="321"><!-- responsive breakpoint node -->
+  <div class="breakpoint active" id="bp_infinity" data-min-width="701"><!-- responsive breakpoint node -->
    <div class="clearfix borderbox" id="page"><!-- column -->
+    <div class="clearfix colelem" id="pu1391-4"><!-- group -->
+     <div class="clearfix grpelem" id="u1391-4"><!-- content -->
+      <p>Donde Mau</p>
+     </div>
+     <div class="clip_frame grpelem" id="u1392"><!-- image -->
+      <img class="block temp_no_img_src" id="u1392_img" data-orig-src="images/logo.jpg?crc=468265230" alt="" data-heightwidthratio="0.7706422018348624" data-image-width="109" data-image-height="84" src="images/blank.gif?crc=4208392903"/>
+     </div>
+    </div>
+    <div class="clearfix colelem" id="pu1394-4"><!-- group -->
+     <div class="clearfix grpelem" id="u1394-4"><!-- content -->
+      <p>Catálogo de licores</p>
+     </div>
+     <div class="clearfix grpelem" id="u1395-4"><!-- content -->
+      <p>Catálogo de otros productos</p>
+     </div>
+    </div>
+    <div class="clearfix colelem" id="pu1396"><!-- group -->
+     <a class="nonblock nontext clip_frame grpelem" id="u1396" href="licores.html"><!-- image --><img class="block temp_no_img_src" id="u1396_img" data-orig-src="images/licores.jpg?crc=136790628" alt="" data-heightwidthratio="0.6658097686375322" data-image-width="389" data-image-height="259" src="images/blank.gif?crc=4208392903"/></a>
+     <a class="nonblock nontext clip_frame grpelem" id="u1398" href="productos.html"><!-- image --><img class="block temp_no_img_src" id="u1398_img" data-orig-src="images/productos-crop-u1398.jpg?crc=4034886217" alt="" data-heightwidthratio="0.6658097686375322" data-image-width="389" data-image-height="259" src="images/blank.gif?crc=4208392903"/></a>
+    </div>
+    <div class="clearfix colelem" id="u1400-4"><!-- content -->
+     <p>Puede contactarnos a los números</p>
+    </div>
+    <div class="clearfix colelem" id="pu1401"><!-- group -->
+     <div class="clip_frame grpelem" id="u1401"><!-- image -->
+      <img class="block temp_no_img_src" id="u1401_img" data-orig-src="images/telefono.jpg?crc=4179367031" alt="" data-heightwidthratio="1.4777777777777779" data-image-width="90" data-image-height="133" src="images/blank.gif?crc=4208392903"/>
+     </div>
+     <div class="clip_frame grpelem" id="u1403"><!-- image -->
+      <img class="block temp_no_img_src" id="u1403_img" data-orig-src="images/whatsapp.jpg?crc=4267791207" alt="" data-heightwidthratio="0.9047619047619048" data-image-width="147" data-image-height="133" src="images/blank.gif?crc=4208392903"/>
+     </div>
+     <div class="clearfix grpelem" id="pu1405-4"><!-- column -->
+      <div class="clearfix colelem" id="u1405-4"><!-- content -->
+       <p>+506 7299 5897</p>
+      </div>
+      <div class="clearfix colelem" id="u1406-4"><!-- content -->
+       <p>+506 7082 5097</p>
+      </div>
+     </div>
+    </div>
+    <div class="clearfix colelem" id="u1407-4"><!-- content -->
+     <p>Sitio construido por Eric Mauricio Ulate Rodríguez 2024</p>
+    </div>
+    <div class="verticalspacer" data-offset-top="0" data-content-above-spacer="877" data-content-below-spacer="134" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+   </div>
+  </div>
+  <div class="breakpoint" id="bp_700" data-min-width="321" data-max-width="700"><!-- responsive breakpoint node -->
+   <div class="clearfix borderbox temp_no_id" data-orig-id="page"><!-- column -->
     <div class="clearfix colelem" id="pu98-4"><!-- group -->
      <div class="clearfix grpelem" id="u98-4"><!-- content -->
       <p>Donde Mau</p>
      </div>
      <div class="clip_frame grpelem" id="u102"><!-- image -->
-      <img class="block temp_no_img_src" id="u102_img" data-orig-src="images/logo.jpg?crc=468265230" alt="" data-heightwidthratio="0.7706422018348624" data-image-width="109" data-image-height="84" src="images/blank.gif?crc=4208392903"/>
+      <img class="block temp_no_img_src" id="u102_img" data-orig-src="images/logo.jpg?crc=468265230" alt="" data-heightwidthratio="0.7717391304347826" data-image-width="92" data-image-height="71" src="images/blank.gif?crc=4208392903"/>
      </div>
     </div>
     <div class="clearfix colelem" id="pu114-4"><!-- group -->
@@ -46,18 +93,18 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </div>
     <div class="clearfix colelem" id="pu124"><!-- group -->
-     <a class="nonblock nontext clip_frame grpelem" id="u124" href="licores.html"><!-- image --><img class="block temp_no_img_src" id="u124_img" data-orig-src="images/licores.jpg?crc=136790628" alt="" data-heightwidthratio="0.6658097686375322" data-image-width="389" data-image-height="259" src="images/blank.gif?crc=4208392903"/></a>
-     <a class="nonblock nontext clip_frame grpelem" id="u136" href="productos.html"><!-- image --><img class="block temp_no_img_src" id="u136_img" data-orig-src="images/productos-crop-u136.jpg?crc=4034886217" alt="" data-heightwidthratio="0.6658097686375322" data-image-width="389" data-image-height="259" src="images/blank.gif?crc=4208392903"/></a>
+     <a class="nonblock nontext clip_frame grpelem" id="u124" href="licores.html"><!-- image --><img class="block temp_no_img_src" id="u124_img" data-orig-src="images/licores284x190.jpg?crc=3938083464" alt="" data-heightwidthratio="0.6654929577464789" data-image-width="284" data-image-height="189" src="images/blank.gif?crc=4208392903"/></a>
+     <a class="nonblock nontext clip_frame grpelem" id="u136" href="productos.html"><!-- image --><img class="block temp_no_img_src" id="u136_img" data-orig-src="images/productos-crop-u136.jpg?crc=223123950" alt="" data-heightwidthratio="0.6654929577464789" data-image-width="284" data-image-height="189" src="images/blank.gif?crc=4208392903"/></a>
     </div>
     <div class="clearfix colelem" id="u148-4"><!-- content -->
      <p>Puede contactarnos a los números</p>
     </div>
     <div class="clearfix colelem" id="pu152"><!-- group -->
      <div class="clip_frame grpelem" id="u152"><!-- image -->
-      <img class="block temp_no_img_src" id="u152_img" data-orig-src="images/telefono.jpg?crc=4179367031" alt="" data-heightwidthratio="1.4777777777777779" data-image-width="90" data-image-height="133" src="images/blank.gif?crc=4208392903"/>
+      <img class="block temp_no_img_src" id="u152_img" data-orig-src="images/telefono.jpg?crc=4179367031" alt="" data-heightwidthratio="1.4696969696969697" data-image-width="66" data-image-height="97" src="images/blank.gif?crc=4208392903"/>
      </div>
      <div class="clip_frame grpelem" id="u164"><!-- image -->
-      <img class="block temp_no_img_src" id="u164_img" data-orig-src="images/whatsapp.jpg?crc=4267791207" alt="" data-heightwidthratio="0.9047619047619048" data-image-width="147" data-image-height="133" src="images/blank.gif?crc=4208392903"/>
+      <img class="block temp_no_img_src" id="u164_img" data-orig-src="images/whatsapp.jpg?crc=4267791207" alt="" data-heightwidthratio="0.9074074074074074" data-image-width="108" data-image-height="98" src="images/blank.gif?crc=4208392903"/>
      </div>
      <div class="clearfix grpelem" id="pu176-4"><!-- column -->
       <div class="clearfix colelem" id="u176-4"><!-- content -->
@@ -71,7 +118,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <div class="clearfix colelem" id="u186-4"><!-- content -->
      <p>Sitio construido por Eric Mauricio Ulate Rodríguez 2024</p>
     </div>
-    <div class="verticalspacer" data-offset-top="0" data-content-above-spacer="877" data-content-below-spacer="134" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="verticalspacer" data-offset-top="0" data-content-above-spacer="859" data-content-below-spacer="173" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
    </div>
   </div>
   <div class="breakpoint" id="bp_320" data-max-width="320"><!-- responsive breakpoint node -->
