--- a/productos.html
+++ b/productos.html
@@ -17,15 +17,15 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>productos</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/productos.css?crc=4086407325" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/productos.css?crc=484870693" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/nomq_productos.css?crc=66192247" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_productos.css?crc=4139051352" id="nomq_pagesheet"/>
   <![endif]-->
    </head>
  <body>
 
-  <div class="breakpoint active" id="bp_infinity" data-min-width="321"><!-- responsive breakpoint node -->
+  <div class="breakpoint active" id="bp_infinity" data-min-width="701"><!-- responsive breakpoint node -->
    <div class="clearfix borderbox" id="page"><!-- group -->
     <div class="clearfix grpelem" id="ppu1047-4"><!-- column -->
      <div class="clearfix colelem" id="pu1047-4"><!-- group -->
@@ -53,10 +53,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
         <p id="u1012-5">También incluye 1 puerto tipo C</p>
         <p id="u1012-6">&nbsp;</p>
        </div>
-       <div class="clearfix colelem" id="u1029-4"><!-- content -->
-        <p>Precio: ¢ 10.000</p>
-       </div>
       </div>
+     </div>
+     <div class="clearfix colelem" id="u1029-4"><!-- content -->
+      <p>Precio: ¢ 10.000</p>
      </div>
      <div class="clearfix colelem" id="pu1062"><!-- group -->
       <div class="clip_frame grpelem" id="u1062"><!-- image -->
@@ -124,15 +124,114 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </div>
     </div>
-    <div class="verticalspacer" data-offset-top="1733" data-content-above-spacer="1733" data-content-below-spacer="77" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="verticalspacer" data-offset-top="1769" data-content-above-spacer="1769" data-content-below-spacer="77" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <div class="clearfix grpelem" id="u1028-4"><!-- content -->
      <p>Somos tienda virtual</p>
     </div>
    </div>
   </div>
-  <div class="breakpoint" id="bp_320" data-max-width="320"><!-- responsive breakpoint node -->
-   <div class="clearfix borderbox temp_no_id" data-orig-id="page"><!-- column -->
-    <div class="verticalspacer" data-offset-top="0" data-content-above-spacer="0" data-content-below-spacer="500" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+  <div class="breakpoint" id="bp_700" data-max-width="700"><!-- responsive breakpoint node -->
+   <div class="clearfix borderbox temp_no_id" data-orig-id="page"><!-- group -->
+    <div class="clearfix grpelem" id="ppu2059-4"><!-- column -->
+     <div class="clearfix colelem" id="pu2059-4"><!-- group -->
+      <div class="clearfix grpelem" id="u2059-4"><!-- content -->
+       <p>Donde Mau</p>
+      </div>
+      <div class="clip_frame grpelem" id="u2122"><!-- image -->
+       <img class="block temp_no_img_src" id="u2122_img" data-orig-src="images/logo.jpg?crc=468265230" alt="" data-heightwidthratio="0.7741935483870968" data-image-width="93" data-image-height="72" src="images/blank.gif?crc=4208392903"/>
+      </div>
+     </div>
+     <div class="clearfix colelem" id="u2060-4"><!-- content -->
+      <p>Sección de productos</p>
+     </div>
+     <div class="clearfix colelem" id="pu2061"><!-- group -->
+      <div class="clip_frame grpelem" id="u2061"><!-- image -->
+       <img class="block temp_no_img_src" id="u2061_img" data-orig-src="images/cargador%20multi%20puerto.jpg?crc=149337286" alt="" data-heightwidthratio="1.0261780104712042" data-image-width="191" data-image-height="196" src="images/blank.gif?crc=4208392903"/>
+      </div>
+      <div class="clearfix grpelem" id="pu2063-4"><!-- column -->
+       <div class="clearfix colelem" id="u2063-4"><!-- content -->
+        <p>Cargador para dispositivos USB</p>
+       </div>
+       <div class="clearfix colelem" id="u2064-7"><!-- content -->
+        <p>Cargador para dispositivos USB, que se conecta al tomacorriente. Ideal para celulares, lámparas, controles, entre otros</p>
+        <p>&nbsp;</p>
+        <p>También incluye 1 puerto tipo C</p>
+       </div>
+       <div class="clearfix colelem" id="u2065-4"><!-- content -->
+        <p>Precio: ¢ 10.000</p>
+       </div>
+      </div>
+     </div>
+     <div class="clearfix colelem" id="pu2066"><!-- group -->
+      <div class="clip_frame grpelem" id="u2066"><!-- image -->
+       <img class="block temp_no_img_src" id="u2066_img" data-orig-src="images/picador%20de%20verduras.jpg?crc=4080828978" alt="" data-heightwidthratio="1.358288770053476" data-image-width="187" data-image-height="254" src="images/blank.gif?crc=4208392903"/>
+      </div>
+      <div class="clearfix grpelem" id="pu2068-4"><!-- column -->
+       <div class="clearfix colelem" id="u2068-4"><!-- content -->
+        <p>Picador de verduras</p>
+       </div>
+       <div class="clearfix colelem" id="u2069-16"><!-- content -->
+        <p>Multi picador de verduras diseñado para facilitar la preparación de alimentos al procesar verduras</p>
+        <p>Capacidad de 1.2 litros</p>
+        <p>Permite desmontaje fácil y seguro</p>
+        <p>Apto para lavavajillas</p>
+        <p>Fácil de limpiar</p>
+        <p>Cuchillas intercambiables de acero inoxidable, diseñadas para rebanar, cortar, picar y rallar verduras</p>
+        <p>Incluye mecanismos de bloqueo y sujeción para evitar el funcionamiento accidental</p>
+       </div>
+       <div class="clearfix colelem" id="u2070-4"><!-- content -->
+        <p>Precio: ¢ 10.000</p>
+       </div>
+      </div>
+     </div>
+     <div class="clearfix colelem" id="pu2136"><!-- group -->
+      <div class="clip_frame grpelem" id="u2136"><!-- image -->
+       <img class="block temp_no_img_src" id="u2136_img" data-orig-src="images/perfume%20tommy%20men.jpg?crc=4192809107" alt="" data-heightwidthratio="1.3315508021390374" data-image-width="187" data-image-height="249" src="images/blank.gif?crc=4208392903"/>
+      </div>
+      <div class="clearfix grpelem" id="pu2138-4"><!-- column -->
+       <div class="clearfix colelem" id="u2138-4"><!-- content -->
+        <p>Perfume Tommy para caballeros</p>
+       </div>
+       <div class="clearfix colelem" id="u2139-12"><!-- content -->
+        <p>Este Eau de toilette es la fragancia clásica de Tommy Hilfiger, lo que lo convierte en un perfume atemporal, fresco y vigente</p>
+        <p>En un envase sobrio y elegante, remarcado por líneas claras y coronado con una tapa plateada, en su formato de 100 ml., hacen de este perfume de hombre el ideal para el día a día</p>
+        <p>&nbsp;</p>
+        <p>Aroma: Floral</p>
+        <p>&nbsp;</p>
+        <p>Presentación: 100 ML</p>
+       </div>
+       <div class="clearfix colelem" id="u2140-4"><!-- content -->
+        <p>Precio: ¢ 24.000</p>
+       </div>
+      </div>
+     </div>
+     <div class="clearfix colelem" id="pu2164"><!-- group -->
+      <div class="clip_frame grpelem" id="u2164"><!-- image -->
+       <img class="block temp_no_img_src" id="u2164_img" data-orig-src="images/perfume%20tommy%20men.jpg?crc=4192809107" alt="" data-heightwidthratio="1.3315508021390374" data-image-width="187" data-image-height="249" src="images/blank.gif?crc=4208392903"/>
+      </div>
+      <div class="clearfix grpelem" id="pu2166-4"><!-- column -->
+       <div class="clearfix colelem" id="u2166-4"><!-- content -->
+        <p>Kit de cuidado del rostro</p>
+       </div>
+       <div class="clearfix colelem" id="u2167-13"><!-- content -->
+        <p>El ácido hialurónico es un gran aliado para el cuidado de la piel</p>
+        <p>&nbsp;</p>
+        <p>Sus propiedades atacan directamente la pérdida de hidratación, contribuyendo a disminuir las arrugas y las líneas de expresión</p>
+        <p>&nbsp;</p>
+        <p>Desempeña una importante función en la estructura de la piel, siendo responsable de la elasticidad de la misma</p>
+        <p>&nbsp;</p>
+        <p>Presentación: Kit de 3 piezas</p>
+       </div>
+       <div class="clearfix colelem" id="u2168-4"><!-- content -->
+        <p>Precio: ¢ 10.000</p>
+       </div>
+      </div>
+     </div>
+    </div>
+    <div class="verticalspacer" data-offset-top="1430" data-content-above-spacer="1429" data-content-below-spacer="89" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="clearfix grpelem" id="u2191-4"><!-- content -->
+     <p>Somos tienda virtual</p>
+    </div>
    </div>
   </div>
   <!-- Other scripts -->
