--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Inicio</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=534651210"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=61812943" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=3991826804"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=489035726" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-p_g_-maestra.css?crc=186744596"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=4107437438" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-p_g_-maestra.css?crc=451789958"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=380626803" id="nomq_pagesheet"/>
   <![endif]-->
    </head>
  <body>
@@ -140,12 +140,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </div>
     <div class="clearfix colelem" id="pu213"><!-- group -->
-     <div class="clip_frame grpelem" id="u213"><!-- image -->
-      <img class="block temp_no_img_src" id="u213_img" data-orig-src="images/licores122x81.jpg?crc=16849128" alt="" data-heightwidthratio="0.6639344262295082" data-image-width="122" data-image-height="81" src="images/blank.gif?crc=4208392903"/>
-     </div>
-     <div class="clip_frame grpelem" id="u222"><!-- image -->
-      <img class="block temp_no_img_src" id="u222_img" data-orig-src="images/productos-crop-u222.jpg?crc=3905064862" alt="" data-heightwidthratio="0.6639344262295082" data-image-width="122" data-image-height="81" src="images/blank.gif?crc=4208392903"/>
-     </div>
+     <a class="nonblock nontext clip_frame grpelem" id="u213" href="licores.html"><!-- image --><img class="block temp_no_img_src" id="u213_img" data-orig-src="images/licores122x81.jpg?crc=16849128" alt="" data-heightwidthratio="0.6639344262295082" data-image-width="122" data-image-height="81" src="images/blank.gif?crc=4208392903"/></a>
+     <a class="nonblock nontext clip_frame grpelem" id="u222" href="productos.html"><!-- image --><img class="block temp_no_img_src" id="u222_img" data-orig-src="images/productos-crop-u222.jpg?crc=3905064862" alt="" data-heightwidthratio="0.6639344262295082" data-image-width="122" data-image-height="81" src="images/blank.gif?crc=4208392903"/></a>
     </div>
     <div class="clearfix colelem" id="u231-4"><!-- content -->
      <p>Puede contactarnos a los números</p>
