--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@ document.documentElement.className = document.documentElement.className.replace(
 if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "jquery.museresponsive.js", "require.js", "index.css"], "outOfDate":[]};
 </script>
   
-  <title>Inicio</title>
+  <title>Donde Mau</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=3776288986"/>
   <link rel="stylesheet" type="text/css" href="css/index.css?crc=314630997" id="pagesheet"/>
+  <link rel="icon" href="images\playa.ico" type="image/x-icon">
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-p_g_-maestra.css?crc=451789958"/>
