--- a/productos.html
+++ b/productos.html
@@ -14,7 +14,8 @@ document.documentElement.className = document.documentElement.className.replace(
 if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "jquery.museresponsive.js", "require.js", "productos.css"], "outOfDate":[]};
 </script>
   
-  <title>productos</title>
+  <title>Productos</title>
+  <link rel="icon" href="images\productos.ico" type="image/x-icon">
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
   <link rel="stylesheet" type="text/css" href="css/productos.css?crc=293359835" id="pagesheet"/>
