--- a/licores.html
+++ b/licores.html
@@ -14,7 +14,8 @@ document.documentElement.className = document.documentElement.className.replace(
 if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "jquery.museresponsive.js", "require.js", "licores.css"], "outOfDate":[]};
 </script>
   
-  <title>licores</title>
+  <title>Licores</title>
+  <link rel="icon" href="images\Drinks-14_icon.ico" type="image/x-icon">
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
   <link rel="stylesheet" type="text/css" href="css/licores.css?crc=391738466" id="pagesheet"/>
